name:               dutchhug-nl
version:            0.0.0
license:            BSD3
license-file:       LICENSE
author:             Tom Lokhorst tom@lokhorst.eu
maintainer:         Tom Lokhorst tom@lokhorst.eu
synopsis:           A web application based on Yesod.
description:        The default web application. You might want to change this.
category:           Web
stability:          Stable
cabal-version:      >= 1.2
build-type:         Simple
homepage:           http://dutchhug.nl/

executable          dutchhug-nl
    build-depends:  base >= 4 && < 5,
                    yesod >= 0.0.0 && < 0.1,
                    safe-failure >= 0.4.0 && < 0.5,
                    data-object-yaml >= 0.2.0.1 && < 0.3
    main-is:        DutchHug.hs
    ghc-options:    -Wall